--- a/003.md
+++ b/003.md
@@ -89,7 +89,7 @@
 [`Watan TV`](http://watantv.origin.technostreaming.net:8081/watantv_source2/live/chunks.m3u8)
 [`Zagros (720p)`](https://5a3ed7a72ed4b.streamlock.net/zagrostv/SMIL:myStream.smil/playlist.m3u8)
 
-Religious
+# Religious
 [`ABNsat`](http://rtmp1.abnsat.com/hls/arabic.m3u8)
 [`Ahlu Al Quran TV (720p)`](https://5b18be6964c2f.streamlock.net/m/ngrp:ahul_all/playlist.m3u8)
 [`Al Aqsa Channel (480p)`](https://live-1.linuxway.info/aqsatv/live/tv/playlist.m3u8)
@@ -145,7 +145,7 @@ Religious
 [`The Kingdom Sat (576p)`](https://bcovlive-a.akamaihd.net/87f7c114719b4646b7c4263c26515cf3/eu-central-1/6008340466001/profile_0/chunklist.m3u8)
 [`ZAD TV`](http://149.100.19.226:8001/play/ZAD_TV)
 
-Ungrouped
+# Ungrouped
 [`Abu Dhabi Aloula`](https://admdn2.cdn.mangomolo.com/adtv/smil:adtv.stream.smil/playlist.m3u8)
 [`Abu Dhabi Emirates`](https://admdn3.cdn.mangomolo.com/emarat/smil:emarat.stream.smil/playlist.m3u8)
 [`Abu Dhabi Sports 2`](https://admdn5.cdn.mangomolo.com/adsports2/smil:adsports2.stream.smil/playlist.m3u8)
@@ -251,7 +251,7 @@ Ungrouped
 [`Zee Aflam (720p)`](https://weyyak-live.akamaized.net/weyyak_zee_aflam/index.m3u8)
 [`Zee Alwan (720p)`](https://weyyak-live.akamaized.net/weyyak_zee_alwan/index.m3u8)
 
-Sports
+# Sports
 [`Abu Dhabi Sports 1 (1080p)`](https://admdn1.cdn.mangomolo.com/adsports1/smil:adsports1.stream.smil/playlist.m3u8)
 [`Abu Dhabi Sports 4 (1080p) [Geo-blocked]`](https://admdn4ta.cdn.mgmlcdn.com/adsports4/smil:adsports4.stream.smil/playlist.m3u8)
 [`Al Kass Five (576p)`](https://alkasmsl4.akamaized.net/hls/live/2003123/alkas5abe/master.m3u8)
@@ -272,7 +272,7 @@ Sports
 [`Sharjah Sports TV (1080p)`](https://svs.itworkscdn.net/smc4sportslive/smc4.smil/playlist.m3u8)
 [`Yas (1080p)`](https://admdn1.cdn.mangomolo.com/yastv/smil:yastv.stream.smil/playlist.m3u8)
 
-News
+# News
 [`Al Alam (576p)`](https://live2.alalamtv.net/alalam.m3u8)
 [`Al Arabiya (1080p)`](https://live.alarabiya.net/alarabiapublish/alarabiya.smil/playlist.m3u8)
 [`Al Ekhbariya (1080p)`](https://iptv--iptv.repl.co/Arabic/Ekhbariyah/)
@@ -329,22 +329,22 @@ News
 [`TRT Arabi (1080p)`](https://tv-trtarabi.live.trt.com.tr/master.m3u8)
 [`TV Seventeen (720p)`](https://cdn.tvseventeen.com/test_tv_seventeen/index.m3u8)
 
-Documentary
+# Documentary
 [`Al Jazeera Documentary (576p)`](#EXTVLCOPT:http-referrer=http://azrotv.com/)
 [`Al Jazeera Documentary (1080p) [Geo-blocked]`](https://live-hls-web-ajd.getaj.net/AJD/index.m3u8)
 [`National Geographic Abu Dhabi`](http://admdn2.cdn.mangomolo.com/nagtv/smil:nagtv.stream.smil/chunklist_b800000_t64NDgwcA==.m3u8)
 
-Legislative
+# Legislative
 [`Al Jazeera Mubasher (1080p)`](https://live-hls-web-ajm.getaj.net/AJM/index.m3u8)
 
-Classic
+# Classic
 [`Al Rayyan Al Qadeem (1080p)`](https://svs.itworkscdn.net/alrayyanqadeemlive/alrayyanqadeem.smil/playlist.m3u8)
 [`Dubai Zaman`](https://dmiffthvll.cdn.mangomolo.com/dubaizaman/smil:dubaizaman.stream.smil/playlist.m3u8)
 [`Rotana Classic HD (1080p) [Geo-blocked]`](https://hiplayer.hibridcdn.net/t/rotana-classical.m3u8)
 [`Rotana Classic HD (1080p)`](https://shls-rotanaclassic-prod-dub.shahid.net/out/v1/4eebed211c8441228321b4f67a46c5a5/index.m3u8)
 [`Thikrayat TV (1080p)`](https://iptv--iptv.repl.co/Arabic/Zikrayat/)
 
-Music
+# Music
 [`alltv (400p)`](http://185.96.70.242:1935/live/alltv/playlist.m3u8)
 [`Arabica TV (720p)`](http://istream.binarywaves.com:8081/hls/arabica/playlist.m3u8)
 [`Dijlah Tarab (576p)`](https://ghaasiflu.online/tarab/index.m3u8)
@@ -364,12 +364,12 @@ Music
 [`Souryana Radio (270p)`](http://82.137.248.16:1935/Souryana/stream19042021/playlist.m3u8)
 [`Wanasah (1080p)`](https://shls-wanasah-prod-dub.shahid.net/out/v1/c84ef3128e564b74a6a796e8b6287de6/index.m3u8)
 
-Business
+# Business
 [`Asharq (1280p) [Portrait]`](https://bcliveunivsecure-lh.akamaihd.net/i/VERTICAL_1@301860/master.m3u8)
 [`Asharq (1080p)`](https://bcsecurelivehls-i.akamaihd.net/hls/live/1021447/6203311941001/index.m3u8)
 [`CNBC Arabiya (720p)`](https://hiplayer.hibridcdn.net/t/cnbcarabia-live.m3u8)
 
-Kids
+# Kids
 [`Atfal Wa Mawaheb`](https://5d658d7e9f562.streamlock.net/atfal1.com/atfal2/playlist.m3u8)
 [`Cartoon Network Arabic (1080p)`](https://shls-cartoon-net-prod-dub.shahid.net/out/v1/dc4aa87372374325a66be458f29eab0f/index.m3u8)
 [`Gulli Bil Arabi (1080p)`](https://shls-gulli-bil-arabi-prod-dub.shahid.net/out/v1/440c8a376b2049788371a8c2916887c4/index.m3u8)
@@ -384,17 +384,17 @@ Kids
 [`Spacetoon (576p)`](https://streams.spacetoon.com/live/stchannel/smil:livesmil.smil/playlist.m3u8)
 [`Toyor Al-Jannah [Not 24/7]`](https://query-streamlink.lanesh4d0w.repl.co/iptv-query?streaming-ip=https://www.youtube.com/user/toyorlive/live)
 
-Outdoor
+# Outdoor
 [`Beity`](http://82.212.74.2:8000/live/7312.m3u8)
 [`National Geographic Abu Dhabi (1080p)`](https://admdn2.cdn.mangomolo.com/nagtv/smil:nagtv.stream.smil/playlist.m3u8)
 
-Shop
+# Shop
 [`Citruss TV (720p)`](https://citrusstv.akamaized.net/hls/live/687285/CTV/index.m3u8)
 
-Entertainment
+# Entertainment
 [`GEM Arabia [Geo-blocked]`](https://d2e40kvaojifd6.cloudfront.net/stream/gem_arabia/playlist_960x540_2000k.m3u8)
 
-Movies
+# Movies
 [`iFILM Arabic (720p)`](https://live.presstv.com/ifilmlive/smil:ifilmar.smil/playlist.m3u8)
 [`MBC 2 (1080p)`](https://shls-mbc2-prod-dub.shahid.net/out/v1/b4befe19798745fe986f5a9bfba62126/index.m3u8)
 [`MBC Action (1080p)`](https://shls-mbcaction-prod-dub.shahid.net/out/v1/68dd761538e5460096c42422199d050b/index.m3u8)
@@ -405,15 +405,15 @@ Movies
 [`Rotana Cinema HD KSA (1080p)`](https://shls-rotanacinema-ksa-prod-dub.shahid.net/out/v1/6cee1c57ea7841e697eb15cefc98e0a6/index.m3u8)
 [`Syria Drama (270p)`](http://82.137.248.16:1935/Drama/stream19042021/playlist.m3u8)
 
-Travel
+# Travel
 [`Jasco Events TV`](http://82.212.74.100:8000/live/hls/8131.m3u8)
 [`Tunisie Immobilier TV`](https://5ac31d8a4c9af.streamlock.net/tunimmob/myStream/chunklist.m3u8)
 
-Education
+# Education
 [`Oman TV Cultural (1080p)`](https://partwo.cdn.mangomolo.com/omcultural/smil:omcultural.stream.smil/playlist.m3u8)
 [`Syrian Education TV (270p)`](http://82.137.248.16:1935/SEdu/stream19042021/playlist.m3u8)
 [`Yemen Shabab`](https://master.starmena-cloud.com/hls/yemenshabab.m3u8)
 
-Comedy
+# Comedy
 [`Rotana Comedy HD (1080p) [Geo-blocked]`](https://hiplayer.hibridcdn.net/t/rotana-comedy.m3u8)
 
